--- a/index.html
+++ b/index.html
@@ -11,9 +11,14 @@
     <title>bg-iframe-suivi-electioncf25</title>
   </head>
   <body>
-  
+    <div class="pt-1 pb-5">
+      <span id="title" class="font-blickb text-xl leading-none uppercase antialiased pl-2.5 border-l-2 py-0.5 border-blick block ">
+        Succession de Viola Amherd
+      </span>
+    </div>
     <div id="app" class="bg-gray-600"></div>
     <script type="module" src="/src/app.js"></script>
     <script type="text/javascript" src="https://www.blick.ch/assets/iframeHeightAdjustment.js"></script>
   </body>
 </html>
+ 
